[gd_scene load_steps=5 format=3 uid="uid://tga3r8i0jwv6"]

[ext_resource type="PackedScene" path="res://src/Player.tscn" id="1"]
[ext_resource type="Script" path="res://src/Main.gd" id="2"]
[ext_resource type="PackedScene" path="res://src/Enemy.tscn" id="3"]

[sub_resource type="Curve2D" id="1"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("2")
mob_scene = ExtResource("3")

[node name="Player" parent="." instance=ExtResource("1")]
position = Vector2(142, 98)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("1")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="Enemy" parent="." instance=ExtResource("3")]
position = Vector2(233, 176)

[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="MobTimer" to="." method="_on_MobTimer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
